--- a/TimeTable/TimeTable/WPF/Pages/UnauthorizedPage.xaml
+++ b/TimeTable/TimeTable/WPF/Pages/UnauthorizedPage.xaml
@@ -3,12 +3,54 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TimeTable.WPF"
+      xmlns:local="clr-namespace:TimeTable.WPF.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="1200"
       Title="Страница неавторизованного пользователя">
 
-    <Grid Background="#ffdadada">
-        
+    <Page.Resources>
+        <Style x:Key="CenteredHeaderStyle" TargetType="DataGridColumnHeader">
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="MinWidth" Value="95" />
+        </Style>
+    </Page.Resources>
+    <Grid Background="#FFE5E5E5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <DockPanel Grid.Row="0" Grid.ColumnSpan="2" Margin="20">
+            <TextBlock FontSize="15" VerticalAlignment="Center" Text="Вывод расписания: "/>
+            <ComboBox FontSize="15" SelectionChanged="SelectEntity_SelectionChanged" x:Name="SelectEntity" Margin="20,10,20,10" HorizontalAlignment="Left">
+                <TextBlock>По преподавателям</TextBlock>
+                <TextBlock>По группам</TextBlock>
+            </ComboBox>
+            <StackPanel x:Name="ChooseSP" Orientation="Horizontal" Visibility="Hidden">
+                <TextBlock Margin="40 0 20 0" VerticalAlignment="Center" FontSize="15" x:Name="ToChooseTB"/>
+                <ComboBox MinWidth="120" ItemsSource="{Binding}" IsEditable="True" VerticalAlignment="Center" FontSize="15" x:Name="ToChooseCB"/>
+                <TextBlock VerticalAlignment="Center" FontSize="15" Text="Выбор недели: " Margin="40 0 20 0"/>
+                <DatePicker FontSize="15" HorizontalAlignment="Left" x:Name="WeekDatePicker" SelectedDateChanged="WeekDatePicker_SelectedDateChanged"/>
+            </StackPanel>
+        </DockPanel>
+
+        <DataGrid Grid.Row="1" Margin="20 20 20 0" CanUserAddRows="False" x:Name="Timetable_DataGrid" SelectionChanged="Timetable_SelectionChanged" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Время" Binding="{Binding Time}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center"/>
+                            <Setter Property="VerticalAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn x:Name="MondayTimetable" Header="Понедельник" HeaderStyle="{StaticResource CenteredHeaderStyle}" Binding="{Binding Monday}"/>
+                <DataGridTextColumn x:Name="TuesdayTimetable" Header="Вторник" HeaderStyle="{StaticResource CenteredHeaderStyle}" Binding="{Binding Tuesday}"/>
+                <DataGridTextColumn x:Name="WednesdayTimetable" Header="Среда" HeaderStyle="{StaticResource CenteredHeaderStyle}" Binding="{Binding Wednesday}"/>
+                <DataGridTextColumn x:Name="ThursdayTimetable" Header="Четверг" HeaderStyle="{StaticResource CenteredHeaderStyle}" Binding="{Binding Thursday}"/>
+                <DataGridTextColumn x:Name="FridayTimetable" Header="Пятница" HeaderStyle="{StaticResource CenteredHeaderStyle}" Binding="{Binding Friday}"/>
+                <DataGridTextColumn x:Name="SaturdayTimetable" Header="Суббота" HeaderStyle="{StaticResource CenteredHeaderStyle}" Binding="{Binding Saturday}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Page>
